--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "@techstark/opencv-js": "^4.7.0-release.1",
+    "axios": "^1.5.0",
     "commander": "^5.0.0",
     "debug": "^4.1.1",
     "helmet": "^7.0.0",
@@ -50,7 +51,8 @@
     "rclnodejs": "^0.x.1",
     "resize-base64": "^1.0.12",
     "roslib": "^1.3.0",
-    "uuid": "^7.0.2",
+    "tough-cookie": "^4.1.3",
+    "uuid": "^7.0.3",
     "ws": "^7.1.1"
   }
 }
